--- a/templates/index2/base.html
+++ b/templates/index2/base.html
@@ -13,6 +13,7 @@
       <!-- the header ~ -->
       <header>
         <div class="header_fixed">
+          <div class="header_info">资讯电话：8356658</div>
           <div class="site_name">
             <a href="/">期货の屋</a>
           </div>
