--- a/static/css/master.css
+++ b/static/css/master.css
@@ -79,7 +79,9 @@ nav{
 .list_left nav{
   margin: 0;
   border: 0;
+  padding: 0;
   min-width: 450px;
+  width: 100%;
   border-bottom: 1px solid #e6e3dc;
 }
 
