--- a/templates/index2/base.html
+++ b/templates/index2/base.html
@@ -73,10 +73,10 @@
       <footer>
         <div class="footer_fixed">
           <div class="friend_link">
-            <p><span>友情链接：</span> <br>{% for i in fr %}<a href="{{ i.link_url }}">{{ i.link_name }}</a>&nbsp;&nbsp;|&nbsp;&nbsp;{% endfor %}
+            <p><span>友情链接：</span>{% for i in fr %}<a href="{{ i.link_url }}">{{ i.link_name }}</a>&nbsp;&nbsp;|&nbsp;&nbsp;{% endfor %}
           </div>
           <div class="copyright">
-            <p>Copyright © 2018.XXX All rights reserved.</p>
+            <p>COPYRIGHT © 2018.XXX ALL RIGHTS RESERVED.</p>
           </div>
         </div>
       </footer>
