--- a/templates/index2/info.html
+++ b/templates/index2/info.html
@@ -4,9 +4,9 @@
     <div class="bread">
         <a href="/">主页</a>
         {% if pageinfo == 4 %}
-        > <a href="/list?type=1">业务信息</a>
+        > <a href="/introduce">业务信息</a>
         {% elif pageinfo == 7 %}
-        > <a href="/list?type=2">费率一览</a>
+        > <a href="/fee">费率一览</a>
         {% endif %}
     </div>
     <div class="bm-title">
