--- a/static/css/master.css
+++ b/static/css/master.css
@@ -342,6 +342,10 @@ main .page_place .pagination li{
   color: #666;
 }
 
+.search_place{
+  padding-left: 7px;
+}
+
 .search_icon{
   display: inline-block;
   vertical-align: bottom;
@@ -394,15 +398,16 @@ main .page_place .pagination li{
 
 .article_card .card_title{
   font-size: 24px;
-  padding-bottom: 2%;
+  padding-bottom: 30px;
 }
 
 .article_card .card_info{
+  padding-bottom: 20px;
   color: #919191;
 }
 
 .article_content{
-  padding-top: 2%;
+  padding-top: 20px;
   padding-bottom: 30px;
 }
 
@@ -419,7 +424,7 @@ main .page_place .pagination li{
 
 .article_summary{
   padding: 1em;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   background-color: #F1F2F6;
 }
 
